fix vid label spacing2

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
 }
 .labels {
   margin-left: -5%;
+  width: 105%;
 }
 .labels li {
   float: left;
